src/platform/webapp/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deltek-catalyst
  labels:
    name: deltek-catalyst
    environment: production
